# kbugsContext

./: .gitignore  CMakeLists.txt  README.md  build.sh  ctxindicator.cpp  ctxindicator.h  kbugsContext  kbugsContext.pro  kbugscontext.cpp  kbugscontext.desktop  kbugscontext.h  kbugscontext.ui  kubeconfig.cpp  kubeconfig.h  loadconfigfromserverdialog.cpp  loadconfigfromserverdialog.h  loadconfigfromserverdialog.ui  main.cpp  res.qrc
icons/: kbugscontext.icns
